--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,7 @@ Django = "^5.0.7"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins.dotenv]
+ignore = "false"
+location = ".env.dev"
